# glim

./: CMakeLists.txt  LICENSE  README.md  test.bat  test.sh
.github/workflows/: ci.yml
docs/: glim.ebnf
src/: analysis.c  analysis.h  compiler.c  compiler.h  diagnostics.c  diagnostics.h  error.c  error.h  lexer.c  lexer.h  main.c  memory.c  memory.h  parser.c  parser.h  slice.h  utils.c  utils.h
